--- a/src/app/hero-detail.component.html
+++ b/src/app/hero-detail.component.html
@@ -5,5 +5,12 @@
   <label>name: </label>
   <input [(ngModel)]="hero.name" placeholder="name"/>
   </div>
+  <button (click)="save()">Save</button>
   <button (click)="goBack()">Back</button>
 </div>
+<li *ngFor="let hero of heroes" (click)="onSelect(hero)"
+    [class.selected]="hero === selectedHero">
+  <span class="badge">{{hero.id}}</span>
+  <button class="delete"
+    (click)="delete(hero); $event.stopPropagation()">x</button>
+</li>
